--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,13 @@
             <version>1.18.2</version>
             <scope>provided</scope>
         </dependency>
+        <!-- Spigot -->
+        <dependency>
+            <groupId>org.spigotmc</groupId>
+            <artifactId>spigot</artifactId>
+            <version>1.7.10-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
