--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
             <version>1.18.2</version>
             <scope>provided</scope>
         </dependency>
-        <!-- Spigot -->
+        <!-- Spigot API 1.8 -->
         <dependency>
             <groupId>org.spigotmc</groupId>
-            <artifactId>spigot</artifactId>
-            <version>1.7.10-R0.1-SNAPSHOT</version>
+            <artifactId>spigot-api</artifactId>
+            <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
