--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>io.github.thatkawaiisam</groupId>
     <artifactId>timers</artifactId>
+    <name>Timers</name>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
